<resources>
    <string name="app_name">CatalogueMovie</string>

    <string name="var"> : </string>
    <string name="var_language">Language</string>
    <string name="var_genre">Genre</string>
    <string name="var_year">Year</string>
    <string name="var_overview">Overview</string>

    <string-array name="data_title">
        <item>glass</item>
        <item>shaft</item>
        <item>mule</item>
        <item>aquaman</item>
        <item>hunterkill</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Mary Poppins Returns</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Venom</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_genre">
        <item>Drama, Romance, Music</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Thriller, Mystrery, Drama</item>
        <item>Animation, Family, Adventure</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Science Fiction, Action</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Science Fiction, Action</item>
    </string-array>

    <string-array name="data_language">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>

    <string-array name="data_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>

    <string-array name="data_image">
        <item>@drawable/glass</item>
        <item>@drawable/shaft</item>
        <item>@drawable/mule</item>
        <item>@drawable/aquaman</item>
        <item>@drawable/hunterkill</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/shazam</item>
        <item>@drawable/spiderman</item>
        <item>@drawable/toy</item>
        <item>@drawable/robinhood</item>
        <item>@drawable/preman</item>
        <item>@drawable/venom</item>
    </string-array>

    <string-array name="data_overview">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just
            about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even
            as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an
            ongoing battle with his own internal demons.
        </item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one
            hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy,
            his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his
            twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate
            of Earth and existence itself has never been more uncertain.
        </item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two
            children make a desperate bid to reach safety.
        </item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town.
            Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee,
            battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.
        </item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to
            track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy
            presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.
        </item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of an untamed,
            elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is
            tested, both dragon and rider must make impossible decisions to save their kind.
        </item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are
            visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with
            the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.
        </item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English
            crown.
        </item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson
            "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.
        </item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the
            host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to
            protect the world from a shadowy organization looking for a symbiote of their own.
        </item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the
            host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to
            protect the world from a shadowy organization looking for a symbiote of their own.
        </item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the
            host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to
            protect the world from a shadowy organization looking for a symbiote of their own.
        </item>
    </string-array>

</resources>
