<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailActivity"
            android:layout_margin="25dp">

        <ImageView
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:scaleType="fitXY"
                android:id="@+id/ivDetailIcon"/>

        <TextView
                android:id="@+id/tvDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/ivDetailIcon"/>

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvDetailTitle"
                     android:layout_toEndOf="@+id/ivDetailIcon">

            <TableRow>
                <TextView
                        android:id="@+id/tvDetailTxYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_year"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/var"/>

                <TextView
                        android:id="@+id/tvDetailYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:id="@+id/tvDetailTxLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_language"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/var"/>

                <TextView
                        android:id="@+id/tvDetailLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"/>
            </TableRow>

            <TableRow android:layout_height="51dp">
                <TextView
                        android:id="@+id/tvDetailTxGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_genre"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/var"/>

                <TextView
                        android:id="@+id/tvDetailGenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"/>
            </TableRow>

        </TableLayout>

        <TextView
                android:id="@+id/tvDetailTxOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/var_overview"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rectangle"
                android:layout_below="@+id/ivDetailIcon"/>

        <TextView
                android:id="@+id/tvDetailOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|fill"
                android:textAlignment="gravity"
                android:layout_below="@+id/tvDetailTxOverview"/>
    </RelativeLayout>
</ScrollView>