<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <ImageView
                android:id="@+id/ivListPict"
                android:layout_width="80dp"
                android:layout_height="130dp"
                android:layout_marginEnd="25dp"
                android:scaleType="fitXY"/>

        <TextView
                android:id="@+id/tvListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ivListPict"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rectangle"/>

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvListTitle"
                     android:layout_toEndOf="@+id/ivListPict">

            <TableRow>
                <TextView
                        android:id="@+id/tvListVarLang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_language"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/var"/>

                <TextView
                        android:id="@+id/tvListLang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:id="@+id/tvListVarGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_genre"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/var"/>

                <TextView
                        android:id="@+id/tvListGenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorAccent"/>
            </TableRow>

        </TableLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>